Update for revised common actions; simplify CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,50 +29,45 @@ on:
     - cron: "35 4 * * 6"
 
 jobs:
-  preflight:
+  ci-image:
     runs-on: ubuntu-22.04
     outputs:
-      image_registry: ${{ steps.details.outputs.image_registry }}
-      image_base: ${{ steps.details.outputs.image_registry }}/${{ steps.details.outputs.registry_account }}/${{ steps.details.outputs.repo_name }}
-      base_image: ${{ steps.details.outputs.image_registry }}/${{ steps.details.outputs.registry_account }}/python
-      need_image: ${{ steps.preflight.outputs.need_image }}
+      image_base: ${{ steps.details.outputs.image_base }}
       image_tag: ${{ steps.preflight.outputs.image_tag }}
       versions: ${{ steps.get_versions.outputs.versions }}
     steps:
     - id: details
       uses: kpfleming/composite-actions/image-details@main
+      with:
+        base_image: python:bullseye-main
+    - uses: actions/checkout@v3
     - id: preflight
       uses: kpfleming/composite-actions/ci-preflight@main
-    - id: get_versions
-      run: cat workflow-support/versions.json >> $GITHUB_OUTPUT
-  ci-image:
-    runs-on: ubuntu-22.04
-    needs:
-    - preflight
-    steps:
-    - uses: actions/checkout@v3
-    - uses: kpfleming/composite-actions/make-ci-image@main
-      if: needs.preflight.outputs.need_image == 'true'
       with:
         files_hash: ${{ hashfiles('tox.ini', 'workflow-support/make_ci_image.sh', 'workflow-support/pdns_build.sh', 'workflow-support/versions.json') }}
-        build_args: ${{ join(fromJSON(needs.preflight.outputs.versions).pdns, ' ') }}
-        base_image: ${{ needs.preflight.outputs.base_image }}
-        image_name: ${{ needs.preflight.outputs.image_base }}:${{ needs.preflight.outputs.image_tag }}
-        image_registry: ${{ needs.preflight.outputs.image_registry }}
+        base_image_hash: ${{ steps.details.outputs.base_image_hash }}
+    - id: get_versions
+      run: cat workflow-support/versions.json >> $GITHUB_OUTPUT
+    - uses: kpfleming/composite-actions/make-ci-image@main
+      if: steps.preflight.outputs.need_image == 'true'
+      with:
+        build_args: ${{ join(fromJSON(steps.get_versions.outputs.versions).pdns, ' ') }}
+        base_image: ${{ steps.details.outputs.base_image }}
+        image_name: ${{ steps.details.outputs.image_base }}:${{ steps.preflight.outputs.image_tag }}
+        image_registry: ${{ steps.details.outputs.image_registry }}
         registry_username: ${{ secrets.QUAY_BOT_NAME }}
         registry_password: ${{ secrets.QUAY_BOT_PASSWORD }}
   test:
     runs-on: ubuntu-22.04
     needs:
-    - preflight
     - ci-image
     strategy:
       matrix:
-        pdns: ${{ fromJSON(needs.preflight.outputs.versions).pdns }}
-        python: ${{ fromJSON(needs.preflight.outputs.versions).python }}
+        pdns: ${{ fromJSON(needs.ci-image.outputs.versions).pdns }}
+        python: ${{ fromJSON(needs.ci-image.outputs.versions).python }}
       fail-fast: false
     container:
-      image: ${{ needs.preflight.outputs.image_base }}:${{ needs.preflight.outputs.image_tag }}
+      image: ${{ needs.ci-image.outputs.image_base }}:${{ needs.ci-image.outputs.image_tag }}
     steps:
     - uses: actions/checkout@v3
     - name: start pdns_server
