--- a/.github/workflows/delete-pr-image.yml
+++ b/.github/workflows/delete-pr-image.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - id: details
-      uses: kpfleming/composite-actions/image-details@main
-    - uses: kpfleming/composite-actions/delete-pr-image@main
+      uses: kpfleming/composite-actions/image-details@v1
+    - uses: kpfleming/composite-actions/delete-pr-image@v1
       with:
         image_registry: ${{ steps.details.outputs.image_registry }}
         registry_account: ${{ steps.details.outputs.registry_account }}
