Convert from flake8 to Ruff for code style and quality checking.
Address all issues found by enabling most Ruff checks.

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands=
 [lint-base]
 deps=
     black
-    flake8
+    ruff
     ansible-lint
 [testenv:lint-action]
 ignore_errors=true
@@ -34,8 +34,8 @@ setenv=
     {[galaxy-base]setenv}
 commands=
     {[galaxy-base]commands}
-    flake8 --ignore=E501,E402,E231 src
     black --check --diff src
+    ruff --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write=all -v'
 [testenv:lint]
@@ -47,8 +47,8 @@ setenv=
     {[galaxy-base]setenv}
 commands=
     {[galaxy-base]commands}
-    flake8 --ignore=E501,E402,E231 src
     black src
+    ruff --fix src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write=all -v'
 [testenv:py{38,39,310,311}-ansible]
