--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,4 +25,5 @@ jobs:
     container:
       image: ${{ needs.image_details.outputs.image_base }}:main
     steps:
+    - uses: actions/checkout@v3
     - uses: kpfleming/composite-actions/lint-tox@v1
