--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
     container:
       image: ${{ needs.image_details.outputs.image_base }}:main
     steps:
+    - uses: actions/checkout@v3
     - uses: kpfleming/composite-actions/galaxy-publish-tox@v1
       with:
         galaxy_token: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
