Updates requires_ansible to minimum supported version.
Do not let ansible-lint write to files during lint-action.

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands=
     black --check --diff src
     ruff --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --write=all -v'
+    bash -c 'ansible-lint -v'
 [testenv:lint]
 allowlist_externals=bash
 deps=
