--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands=
     black --check --diff src
     ruff --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint -v'
+    bash -c 'ansible-lint --profile production -v'
 [testenv:lint]
 allowlist_externals=bash
 deps=
@@ -50,7 +50,7 @@ commands=
     black src
     ruff --fix src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --write=all -v'
+    bash -c 'ansible-lint --write all --profile production -v'
 [testenv:py{38,39,310,311}-ansible]
 passenv=pdns_version
 deps=
