--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ commands=
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write all --profile production -v'
 
-[testenv:py{38,39,310,311}-ansible]
+[testenv:py{38,39,310,311}-ci-action]
 passenv=pdns_version
 deps=
     {[galaxy-base]deps}
