--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,28 +4,32 @@ on:
   pull_request:
     branches:
     - main
-    paths:
-    - 'src/**.py'
-    - 'tox.ini'
-    - 'workflow-support/*.sh'
-    - '.github/workflows/lint.yml'
   schedule:
     - cron: "35 4 * * 6"
 
 jobs:
-  image_details:
+  preflight:
     runs-on: ubuntu-22.04
     outputs:
       image_base: ${{ steps.details.outputs.image_base }}
-    steps:
-    - id: details
-      uses: kpfleming/composite-actions/image-details@v1
-  lint:
-    runs-on: ubuntu-22.04
-    needs:
-    - image_details
-    container:
-      image: ${{ needs.image_details.outputs.image_base }}:main
+      need_lint: ${{ steps.preflight.outputs.need_lint == 'true' }}
     steps:
     - uses: actions/checkout@v3
-    - uses: kpfleming/composite-actions/lint-tox@v1
+    - id: details
+      uses: kpfleming/composite-actions/image-details@v2
+      with:
+        base_image: python:bullseye-main
+    - id: preflight
+      uses: kpfleming/composite-actions/lint-preflight@v2
+      with:
+        lint_paths: workflow-support/lint_paths.yml
+  lint:
+    if: needs.preflight.outputs.need_lint == 'true'
+    runs-on: ubuntu-22.04
+    needs:
+    - preflight
+    container:
+      image: ${{ needs.preflight.outputs.image_base }}:main
+    steps:
+    - uses: actions/checkout@v3
+    - uses: kpfleming/composite-actions/lint-tox@v2
