Update to new Ruff CLI syntax.

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands=
 [lint-base]
 deps=
     black
-    ruff
+    ruff>=0.0.237
     ansible-lint
 
 [testenv:lint-action]
@@ -39,7 +39,7 @@ setenv=
 commands=
     {[galaxy-base]commands}
     black --check --diff src
-    ruff --format=github src
+    ruff check --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --profile production -v'
 
@@ -53,7 +53,7 @@ setenv=
 commands=
     {[galaxy-base]commands}
     black src
-    ruff --fix src
+    ruff check --fix src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write all --profile production -v'
 
