Upgrade to Black 23.

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands=
 
 [lint-base]
 deps=
-    black
+    black>=23
     ruff>=0.0.237
     ansible-lint
 
@@ -38,7 +38,7 @@ setenv=
     {[galaxy-base]setenv}
 commands=
     {[galaxy-base]commands}
-    black --check --diff src
+    black --check --diff --preview src
     ruff check --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --profile production -v'
@@ -52,7 +52,7 @@ setenv=
     {[galaxy-base]setenv}
 commands=
     {[galaxy-base]commands}
-    black src
+    black --preview src
     ruff check --fix src
     bash -c 'shellcheck workflow-support/*.sh'
     bash -c 'ansible-lint --write all --profile production -v'
