--- a/workflow-support/make-galaxy-yml.yml
+++ b/workflow-support/make-galaxy-yml.yml
@@ -5,7 +5,7 @@
   gather_facts: false
 
   vars:
-    tag: 0.0.0
+    tag: "0.0.0"
     collection_dir: ../src
     ansible_python_interpreter: python
 
