Run ansible-lint in strict mode to convert warnings into errors.

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands=
     black --check --diff --preview src
     ruff check --format=github src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --profile production -v'
+    bash -c 'ansible-lint --strict --profile production -v'
 
 [testenv:lint]
 allowlist_externals=bash
@@ -55,7 +55,7 @@ commands=
     black --preview src
     ruff check --fix src
     bash -c 'shellcheck workflow-support/*.sh'
-    bash -c 'ansible-lint --write all --profile production -v'
+    bash -c 'ansible-lint --write all --strict --profile production -v'
 
 [testenv:py{38,39,310,311}-ci-action]
 passenv=pdns_version
