Correct zone type when testing 'Consumer' zones.

--- a/workflow-support/test-zone.yml
+++ b/workflow-support/test-zone.yml
@@ -366,7 +366,7 @@
             name: catalog2.example.
             state: present
             properties:
-              kind: Slave
+              kind: Consumer
               masters:
                 - 1.1.1.1
                 - ::1
