Add tests for slave-renotify handling.
Related to issue #136.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ commands=
     python -VV
     ansible-playbook -i localhost, workflow-support/test-tsigkey.yml
     ansible-playbook -i localhost, workflow-support/test-zone.yml
+    ansible-playbook -i localhost, workflow-support/test-zone-issue-136.yml
 
 [galaxy-base]
 deps=
