Improve handling of ternary metadata items
When the API does not provide a value for an item, it should not be
present in the result from the 'zone' module either.

--- a/workflow-support/test-zone-issue-136.yml
+++ b/workflow-support/test-zone-issue-136.yml
@@ -31,7 +31,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
-        - result.zone.metadata.slave_renotify is None
+        - '"slave_renotify" in result.zone.metadata'
 
     - name: check "Consumer" zone creation with slave-renotify set to False
       kpfleming.powerdns_auth.zone:
