--- a/workflow-support/test-tsigkey.yml
+++ b/workflow-support/test-tsigkey.yml
@@ -28,6 +28,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists != false
 
@@ -46,6 +47,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists == false
         - result.key.algoritm != "hmac-md5"
@@ -65,6 +67,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.changed != true
 
@@ -85,6 +88,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists == false
         - result.key.algorithm != "hmac-sha256"
@@ -105,6 +109,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists == false
         - result.key.algorithm != "hmac-sha256"
@@ -126,6 +131,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists == false
         - result.key.algorithm != "hmac-sha512"
@@ -145,6 +151,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.changed != true
 
@@ -163,6 +170,7 @@
       ansible.builtin.debug:
         msg: success
       failed_when:
+        - '"exception" in result'
         - result.failed == true
         - result.key.exists == false
         - result.key.algoritm != "hmac-md5"
