--- a/workflow-support/test-zone.yml
+++ b/workflow-support/test-zone.yml
@@ -28,9 +28,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.zone.exists != false
+      failed_when: result['exception'] is defined or result.zone.exists != false
 
     - name: check notify for non-existent zone
       kpfleming.powerdns_auth.zone:
@@ -47,9 +45,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.failed != true
+      failed_when: result['exception'] is defined or result.failed != true
 
     - name: check for failure during zone creation without properties
       kpfleming.powerdns_auth.zone:
@@ -66,9 +62,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.failed != true
+      failed_when: result['exception'] is defined or result.failed != true
 
     - name: check for failure during zone creation without soa
       kpfleming.powerdns_auth.zone:
@@ -87,9 +81,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.failed != true
+      failed_when: result['exception'] is defined or result.failed != true
 
     - name: check "Native" zone creation
       kpfleming.powerdns_auth.zone:
@@ -118,15 +110,8 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
-        - result.zone.name != "d2.example."
-        - result.zone.kind != "Native"
-        - result.zone.account != "test-account1"
-        - result.zone.metadata.allow_axfr_from[0] != "AUTO-NS"
-        - result.zone.metadata.ixfr != true
-        - result.zone.metadata.axfr_source != "127.0.0.1"
+      failed_when: result['exception'] is defined or result.changed != true or result.zone.name != "d2.example." or result.zone.kind != "Native" or result.zone.account
+        != "test-account1" or result.zone.metadata.allow_axfr_from[0] != "AUTO-NS" or result.zone.metadata.ixfr != true or result.zone.metadata.axfr_source != "127.0.0.1"
 
     - name: check that zone properties and metadata did not change
       kpfleming.powerdns_auth.zone:
@@ -151,15 +136,8 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != false
-        - result.zone.name != "d2.example."
-        - result.zone.kind != "Native"
-        - result.zone.account != "test-account1"
-        - result.zone.metadata.allow_axfr_from[0] != "AUTO-NS"
-        - result.zone.metadata.ixfr != true
-        - result.zone.metadata.axfr_source != "127.0.0.1"
+      failed_when: result['exception'] is defined or result.changed != false or result.zone.name != "d2.example." or result.zone.kind != "Native" or result.zone.account
+        != "test-account1" or result.zone.metadata.allow_axfr_from[0] != "AUTO-NS" or result.zone.metadata.ixfr != true or result.zone.metadata.axfr_source != "127.0.0.1"
 
     - name: check zone kind change from "Native" to "Master"
       kpfleming.powerdns_auth.zone:
@@ -177,10 +155,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
-        - result.zone.kind != "Master"
+      failed_when: result['exception'] is defined or result.changed != true or result.zone.kind != "Master"
 
     - name: check zone metadata change
       kpfleming.powerdns_auth.zone:
@@ -205,15 +180,9 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
-        - result.zone.metadata.allow_axfr_from[0] != "AUTO-NS"
-        - result.zone.metadata.allow_axfr_from[1] != "::"
-        - result.zone.metadata.ixfr != false
-        - result.zone.metadata.axfr_source != "127.0.0.8"
-        - result.zone.metadata.slave_renotify != true
-        - result.zone.tsig_allow_axfr[0] != "axfr-key"
+      failed_when: result['exception'] is defined or result.changed != true or result.zone.metadata.allow_axfr_from[0] != "AUTO-NS" or result.zone.metadata.allow_axfr_from[1]
+        != "::" or result.zone.metadata.ixfr != false or result.zone.metadata.axfr_source != "127.0.0.8" or result.zone.metadata.slave_renotify != true or result.zone.metadata.tsig_allow_axfr[0]
+        != "axfr-key."
 
     - name: check notify for zone
       kpfleming.powerdns_auth.zone:
@@ -229,9 +198,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
+      failed_when: result['exception'] is defined or result.changed != true
 
     - name: check zone removal
       kpfleming.powerdns_auth.zone:
@@ -247,9 +214,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
+      failed_when: result['exception'] is defined or result.changed != true
 
     - name: check "Slave" zone creation
       kpfleming.powerdns_auth.zone:
@@ -273,14 +238,8 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
-        - result.zone.name != "d3.example."
-        - result.zone.kind != "Slave"
-        - result.zone.masters[0] != "1.1.1.1"
-        - result.zone.masters[1] != "::1"
-        - result.zone.axfr_master_tsig[0] != "axfr-key"
+      failed_when: result['exception'] is defined or result.changed != true or result.zone.name != "d3.example." or result.zone.kind != "Slave" or result.zone.masters[0]
+        != "1.1.1.1" or result.zone.masters[1] != "::1" or result.zone.metadata.axfr_master_tsig[0] != "axfr-key."
 
     - name: check slave zone retrieval
       kpfleming.powerdns_auth.zone:
@@ -307,11 +266,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
-        - result.zone.masters[0] != "2.2.2.2"
-        - result.zone.masters[1] != "::1"
+      failed_when: result['exception'] is defined or result.changed != true or result.zone.masters[0] != "2.2.2.2" or result.zone.masters[1] != "::1"
 
     - name: check zone removal
       kpfleming.powerdns_auth.zone:
@@ -327,9 +282,7 @@
     - name: check result
       ansible.builtin.debug:
         msg: success
-      failed_when:
-        - '"exception" in result'
-        - result.changed != true
+      failed_when: result['exception'] is defined or result.changed != true
 
     - when: (pdns_version == 'master') or (pdns_version is version('4.7', '>='))
       block:
@@ -354,11 +307,7 @@
         - name: check result
           ansible.builtin.debug:
             msg: success
-          failed_when:
-            - '"exception" in result'
-            - result.changed != true
-            - result.zone.name != "catalog1.example."
-            - result.zone.kind != "Producer"
+          failed_when: result['exception'] is defined or result.changed != true or result.zone.name != "catalog1.example." or result.zone.kind != "Producer"
 
         - name: check notify for zone
           register: result
@@ -374,9 +323,7 @@
         - name: check result
           ansible.builtin.debug:
             msg: success
-          failed_when:
-            - '"exception" in result'
-            - result.changed != true
+          failed_when: result['exception'] is defined or result.changed != true
 
         - name: check "Consumer" zone creation
           register: result
@@ -400,14 +347,8 @@
         - name: check result
           ansible.builtin.debug:
             msg: success
-          failed_when:
-            - '"exception" in result'
-            - result.changed != true
-            - result.zone.name != "catalog2.example."
-            - result.zone.kind != "Consumer"
-            - result.zone.masters[0] != "1.1.1.1"
-            - result.zone.masters[1] != "::1"
-            - result.zone.axfr_master_tsig[0] != "axfr-key"
+          failed_when: result['exception'] is defined or result.changed != true or result.zone.name != "catalog2.example." or result.zone.kind != "Consumer" or result.zone.masters[0]
+            != "1.1.1.1" or result.zone.masters[1] != "::1" or result.zone.metadata.axfr_master_tsig[0] != "axfr-key."
 
         - name: check "Consumer" zone retrieval
           kpfleming.powerdns_auth.zone:
@@ -445,7 +386,4 @@
         - name: check result
           ansible.builtin.debug:
             msg: success
-          failed_when:
-            - '"exception" in result'
-            - result.changed != true
-            - result.zone.catalog != "catalog1.example."
+          failed_when: result['exception'] is defined or result.changed != true or result.zone.catalog != "catalog1.example."
