Test playbooks should be linted too.

--- a/workflow-support/lint_paths.yml
+++ b/workflow-support/lint_paths.yml
@@ -2,4 +2,5 @@ paths:
   - 'src/**/*.py'
   - 'tox.ini'
   - 'workflow-support/*.sh'
+  - 'workflow-support/test-*.yml'
   - '.github/workflows/lint.yml'
