--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ passenv=pdns_version
 deps=
     {[galaxy-base]deps}
     {[ansible-base]deps}
+    dnspython
 setenv=
     {[galaxy-base]setenv}
 commands=
